   - Added support for public metadata response in search api (margaretha, 
     issue #43)
   - Disabled some unused web-services: search post, query serialization, 
     collocation base (margaretha)
11/07/2019
   - Added cq parameter to VC statistics API and deprecate corpusQuery (margaretha)
15/07/2019
   - Added backward compatibility support for corpusQuery parameter (margaretha)    

# version 0.62
18/03/2019
   - Added close index controller (margaretha)
11/04/2019
   - Fixed multiple Jackson implementations (margaretha)
25/04/2019
   - Updated Jetty version due to vulnerabilities (margaretha)
27/06/2019
   - Updated Jetty version, fixed server hanging problem (margaretha)
03/07/2019
   - Added VCLoader interface (margaretha)

# version 0.61.6
06/02/2019
   - Added default foundry for structure layer (margaretha)
   - Added authentication to metadata controller (margaretha, issue #38)
   - Updated search krill error handling (margaretha)
18/02/2019
   - Updated handling errors from Koral (margaretha)
19/02/2019
   - Added fields to metadata controller (margaretha, issue #39)   

# version 0.61.5
17/12/2018
   - Added search timeout in meta query (margaretha)
18/12/2018
   - Updated RewriteHandler (margaretha)
19/12/2018
   - Added debug flags (margaretha)
   - Added order on the fields parameter of search get request (margaretha)
07/01/2019
   - Disabled send shutdown to existing jetty web server at start (margaretha)
09/01/2019
   - Added comments (margaretha)
   - Updated code structure (margaretha)
   - Removed spring security libraries and ManagerInterface (margaretha)
21/01/2019
   - Removed codes related to user registration & password management (margaretha)  
22/01/2019
   - Added create, edit, retrieve user default setting controllers (margaretha)
24/01/2019
   - Added default setting key validation & fixed UserdataTest (margaretha)   
28/01/2019
   - Updated Rewrite handler (margaretha)
29/01/2019