@@ -8,6 +8,8 @@
    - Added cq parameter to VC statistics API and deprecate corpusQuery (margaretha)
 15/07/2019
    - Added backward compatibility support for corpusQuery parameter (margaretha)    
+28/08/2019
+   - Resolved #49. Added page param check in the search api (margaretha)
 
 # version 0.62
 18/03/2019
